fixed #2 Random whitespace btwn image and info div solved

--- a/styles/global.css
+++ b/styles/global.css
@@ -497,6 +497,18 @@ section.results.hidden {
   border-radius: var(--border-radius);
 }
 
+/* ----------------------------------------------------------------------------- */
+
+/*! REMOVING WHITESPACE BETWEEN ELEMENTS */
+
+.overflow-info h2 {
+  margin: calc(1% - 2px);
+}
+
+
+/* ----------------------------------------------------------------------------- */
+
+
 .vinyl-info:hover .overflow-info {
   transform: translateY(
     calc(
